# CRUD_sqlite3

./: README.md
simple_sqlite_operating/: Cargo.toml  school.db
simple_sqlite_operating/src/: main.rs
simple_sqlite_operating/src/lib/: fd.rs  mod.rs  sqlite.rs
