[package]
name = "simple_sqlite_operating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version="0.28.0", features = ["column_decltype"]}
path-absolutize = "3.0.13"
glob = "0.3.0"

# [features]
# default = ["column_decltype"]
# column_decltype = []